# dlang

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  meta_dlang_vm.py
dlang_vm/: CMakeLists.txt
dlang_vm/src/: main.cpp
dlang_vm/src/b_dlang/: b_code_builder.cpp  b_code_builder.h  b_group.h  b_group.tpp  b_instruction.cpp  b_instruction.h  b_instruction_interpret.cpp  b_instruction_make_u_instructions.cpp
dlang_vm/src/data_structures/: code.h  code.tpp  flow_graph.h  flow_graph.tpp  int_set.cpp  int_set.h
dlang_vm/src/dlang_vm/: dlang_vm.h  dlang_vm.tpp  execution_statistics.cpp  execution_statistics.h  timer.cpp  timer.h
dlang_vm/src/jit/: compiled_instructions.cpp  compiled_instructions.h  jit.h  jit_state.cpp  jit_state.h  jit_vm.h  jit_vm.tpp
dlang_vm/src/jit_policies/: group_jit.h  group_jit.tpp  jit_policy.h  jit_sequence.cpp  jit_sequence.h  no_jit.cpp  no_jit.h  tracing_jit.cpp  tracing_jit.h
dlang_vm/src/memory_managers/: amortized_allocation.cpp  amortized_allocation.h  mark_and_sweep_gc.cpp  mark_and_sweep_gc.h  memory_manager.h  no_allocation.cpp  no_allocation.h
dlang_vm/src/optimizations/: constant_folding.cpp  constant_folding.h  copy_propagation.cpp  copy_propagation.h  dead_code.cpp  dead_code.h  optimization.cpp  optimization.h  optimizations_sequence.cpp  optimizations_sequence.h  redundant_checks.cpp  redundant_checks.h  unused_writes.cpp  unused_writes.h
dlang_vm/src/options/: options.cpp  options.h
dlang_vm/src/t_dlang/: t_argument.cpp  t_argument.h  t_effects.cpp  t_effects.h  t_state.cpp  (+3 more)
dlang_vm/tests/: CMakeLists.txt
(+88 files in other folders)
